--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,7 +59,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/asus_rog_zephyrus.jpg
+    - assets/lenovo_legion_5_pro.jpg
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
